# flask-neo4j

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGES.rst  CLAUDE.md  LICENSE  README.md  README.rst  flask_neo4j.py  pyproject.toml  requirements.txt  setup.py  test_config.py  test_flask_neo4j.py
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  README  api.md  conf.py  configuration.md  index.md  index.rst  make.bat  quickstart.md
docs/_themes/flask_small/: theme.conf
src/flask_neo4j/: __init__.py  extension.py
tests/: conftest.py  test_extension.py  test_integration.py
